--- a/crates/uv-tool/Cargo.toml
+++ b/crates/uv-tool/Cargo.toml
@@ -34,6 +34,7 @@ uv-static = { workspace = true }
 uv-virtualenv = { workspace = true }
 
 fs-err = { workspace = true }
+owo-colors = { workspace = true }
 pathdiff = { workspace = true }
 serde = { workspace = true }
 thiserror = { workspace = true }
